--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "noImplicitAny": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "target": "es5"
   },
   "exclude": [
     "node_modules/"
